# instacopy-petproject

./: .env.dev  .env.dev.db  .gitignore  Dockerfile  LICENCE  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
instacopy/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  pyproject.toml
instacopy/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
instacopy/apps/accounts/migrations/: 0001_initial.py
instacopy/apps/blog/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
instacopy/apps/blog/management/commands/: createinitialdata.py
instacopy/apps/blog/migrations/: 0001_initial.py
instacopy/config/: settings.py  urls.py
instacopy/static/css/: main.css
instacopy/static/js/: script.js
instacopy/templates/: base.html
instacopy/templates/accounts/: account_settings.html  change_password.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
instacopy/templates/blog/: blog.html  feed.html  post_create.html  post_detail.html  tag_detail.html
instacopy/templates/include/: nav.html  post_list.html  post_single.html
nginx/: Dockerfile
